[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coldfront"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
  {name = "Andrew E. Bruno"},
  {name = "Dori Sajdak"},
  {name = "Mohammad Zia"},
]
description = "HPC Resource Allocation System"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["high-performance-computing", "resource-allocation"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Framework :: Django :: 3.2',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Topic :: Scientific/Engineering',
  'Topic :: System :: Systems Administration',
  'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
]
dependencies = [
  "setuptools>=61.0",
  "arrow==1.3.0",
  "asgiref==3.7.2",
  "bibtexparser==1.4.1",
  "blessed==1.20.0",
  "certifi==2024.2.2",
  "chardet==5.2.0",
  "charset-normalizer==3.3.2",
  "Django==4.2.*",
  "django-crispy-forms==2.1",
  "crispy-bootstrap4==2024.1",
  "django-environ==0.11.2",
  "django-model-utils==4.4.0",
  "django-picklefield==3.1",
  "django-q==1.3.9",
  "django-settings-export==1.2.1",
  "django-simple-history==3.5.0",
  "django-split-settings==1.3.0",
  "django-sslserver==0.22",
  "django-su==1.0.0",
  "doi2bib==0.4.0",
  "factory-boy==3.3.0",
  "Faker==24.1.0",
  "fontawesome-free==5.15.4",
  "FormEncode==2.1.0",
  "future==1.0.0",
  "humanize==4.9.0",
  "idna==3.6",
  "pyparsing==3.1.2",
  "python-dateutil==2.9.0.post0",
  "python-memcached==1.62",
  "pytz==2024.1",
  "redis==3.5.3",
  "requests==2.31.0",
  "six==1.16.0",
  "sqlparse==0.4.4",
  "text-unidecode==1.3",
  "types-python-dateutil==2.8.19.20240106",
  "typing_extensions==4.10.0",
  "urllib3==2.2.1",
  "wcwidth==0.2.13",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
]
auth = [
  "django-auth-ldap==5.1.0",
  "ldap3==2.9.1",
  "python-ldap==3.4.4",
]
prod = [
  "gunicorn==23.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/ubccr/coldfront/issues"
Changelog = "https://github.com/ubccr/coldfront/blob/main/CHANGELOG.md"
Documentation = "https://coldfront.readthedocs.io"
"Source Code" = "https://github.com/ubccr/coldfront"

[project.entry-points."console_scripts"]
coldfront = "coldfront:manage"

[tool.setuptools.dynamic]
version = {attr = "coldfront.VERSION"}

[tool.setuptools.packages]
find = {}
