[build-system]
requires = [
    "wheel",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "coldfront"
dynamic = ["version"]
requires-python = ">=3.12"
authors = [
  {name = "Andrew E. Bruno"},
  {name = "Dori Sajdak"},
  {name = "Mohammad Zia"},
]
description = "HPC Resource Allocation System"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["high-performance-computing", "resource-allocation"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Framework :: Django :: 3.2',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Topic :: Scientific/Engineering',
  'Topic :: System :: Systems Administration',
  'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
]

dependencies = [
    "bibtexparser>=1.4.3",
    "certifi>=2025.1.31",
    "crispy-bootstrap4>=2024.10",
    "django>=5.2",
    "django-crispy-forms>=2.3",
    "django-environ>=0.12.0",
    "django-model-utils>=5.0.0",
    "django-q2>=1.7.6",
    "django-settings-export>=1.2.1",
    "django-simple-history>=3.8.0",
    "django-split-settings>=1.3.2",
    "django-sslserver>=0.22",
    "django-su>=1.0.0",
    "doi2bib>=0.4.0",
    "factory-boy>=3.3.3",
    "faker>=35.2.0",
    "fontawesome-free>=5.15.4",
    "formencode>=2.1.1",
    "humanize>=4.11.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "python-dateutil>=2.9.0",
    "httpx>=0.28.1",
    "plotly[express]>=6.2.0",
    "xdmod-data>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "debugpy>=1.8.14",
  "ruff",
]
auth = [
  "django-auth-ldap==5.1.0",
  "ldap3==2.9.1",
  "python-ldap==3.4.4",
]
prod = [
  "gunicorn==23.0.0",
  "mozilla-django-oidc>=4.0.1",
  "psycopg[binary]>=3.2.7",
]

[project.urls]
"Bug Tracker" = "https://github.com/ubccr/coldfront/issues"
Changelog = "https://github.com/ubccr/coldfront/blob/main/CHANGELOG.md"
Documentation = "https://coldfront.readthedocs.io"
"Source Code" = "https://github.com/ubccr/coldfront"

[project.entry-points."console_scripts"]
coldfront = "coldfront:manage"

[tool.setuptools.dynamic]
version = {attr = "coldfront.VERSION"}

[tool.setuptools.packages]
find = {}

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20241206",
    "django-upgrade"
]
